# CoffeMachine

./: .gitignore  CMakeLists.txt  ForthBase.4th  Globals.h  InputProcessor.cpp  InputProcessor.h  Processor.cpp  Processor.h  Types.h  main.cpp
CommandProcessor/: CommandProcessor.cpp  CommandProcessor.h  Commands.cpp  Commands.h
DataProcessor/: DataProcessor.cpp  DataProcessor.h  Dictionary.cpp  Dictionary.h  Stack.cpp  Stack.h
ExecutionProcessor/: ExecutionProcessor.cpp  ExecutionProcessor.h
ForthLibs/: List.4th  libs.xml
ModuleSupport/: ModuleContainer.cpp  ModuleContainer.h  ModulesInterface.cpp  ModulesInterface.h  UniversalModuleInterface.cpp  UniversalModuleInterface.h
